--- a/index.html
+++ b/index.html
@@ -8,7 +8,40 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <div class="dashboard">Dashboard</div>
+    <div class="dashboard">
+      <h1>Dashboard</h1>
+      <ul>
+        <li>
+          <a href="">Home</a>
+        </li>
+        <li>
+          <a href="">Profile</a>
+        </li>
+        <li>
+          <a href="">Messages</a>
+        </li>
+        <li>
+          <a href="">History</a>
+        </li>
+        <li>
+          <a href="">Tasks</a>
+        </li>
+        <li>
+          <a href="">Communities</a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href=""> Settings</a>
+        </li>
+        <li>
+          <a href=""> Support</a>
+        </li>
+        <li>
+          <a href=""> Privacy</a>
+        </li>
+      </ul>
+    </div>
     <div class="main">
       <div class="header">
         <div>search</div>
