Apply CSS layout to top-header

--- a/index.html
+++ b/index.html
@@ -44,8 +44,13 @@
     </div>
     <div class="main">
       <div class="header">
-        <div>search</div>
-        <div>icons</div>
+        <div class="search">
+          <span>svg</span>
+          <input type="text" placeholder="Search Bar" />
+        </div>
+        <div id="icons">
+          <span>svg</span><span>svg</span><span>PROFILE NAME</span>
+        </div>
         <div>hi there</div>
         <div>new upload share</div>
       </div>
