Apply CSS to lower-header

--- a/index.html
+++ b/index.html
@@ -51,8 +51,18 @@
         <div id="icons">
           <span>svg</span><span>svg</span><span>PROFILE NAME</span>
         </div>
-        <div>hi there</div>
-        <div>new upload share</div>
+        <div class="profile">
+          <div>IMAGE</div>
+          <div class="text">
+            <div>Hi there,</div>
+            <div>Morgan Osley</div>
+          </div>
+        </div>
+        <div class="btns">
+          <span class="btn">new</span>
+          <span class="btn">upload</span>
+          <span class="btn">share</span>
+        </div>
       </div>
       <div class="content">
         <div class="projects">Projects</div>
