Create layout for cards in projects

--- a/index.html
+++ b/index.html
@@ -65,8 +65,69 @@
         </div>
       </div>
       <div class="content">
-        <div class="projects">Projects</div>
-        <div class="sidebar">Announcements</div>
+        <div class="projects">
+          <div class="heading">Your Projects</div>
+          <div class="cards">
+            <div class="card">
+              <div class="bold">Super Easy Project</div>
+              <div class="text">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Sapiente corrupti ipsam fugit ab iure sequi ducimus natus velit
+                rem quidem!
+              </div>
+              <div>btn btn btn</div>
+            </div>
+            <div class="card">
+              <div class="bold">Super Easy Project</div>
+              <div class="text">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Sapiente corrupti ipsam fugit ab iure sequi ducimus natus velit
+                rem quidem!
+              </div>
+              <div>btn btn btn</div>
+            </div>
+            <div class="card">
+              <div class="bold">Super Easy Project</div>
+              <div class="text">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Sapiente corrupti ipsam fugit ab iure sequi ducimus natus velit
+                rem quidem!
+              </div>
+              <div>btn btn btn</div>
+            </div>
+            <div class="card">
+              <div class="bold">Super Easy Project</div>
+              <div class="text">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Sapiente corrupti ipsam fugit ab iure sequi ducimus natus velit
+                rem quidem!
+              </div>
+              <div>btn btn btn</div>
+            </div>
+            <div class="card">
+              <div class="bold">Super Easy Project</div>
+              <div class="text">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Sapiente corrupti ipsam fugit ab iure sequi ducimus natus velit
+                rem quidem!
+              </div>
+              <div>btn btn btn</div>
+            </div>
+            <div class="card">
+              <div class="bold">Super Easy Project</div>
+              <div class="text">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Sapiente corrupti ipsam fugit ab iure sequi ducimus natus velit
+                rem quidem!
+              </div>
+              <div>btn btn btn</div>
+            </div>
+          </div>
+        </div>
+        <div class="sidebar">
+          <div class="heading">Announcements</div>
+          <div class="announcements"></div>
+        </div>
       </div>
     </div>
   </body>
