Create layout for Announcements

--- a/index.html
+++ b/index.html
@@ -126,7 +126,32 @@
         </div>
         <div class="sidebar">
           <div class="heading">Announcements</div>
-          <div class="announcements"></div>
+          <div class="announcements">
+            <div class="announcement">
+              <div class="bold">Site Maintainence</div>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quia
+                harum quaerat aut corporis quis quam pariatur fugiat nobis
+              </p>
+            </div>
+            <div class="separator"></div>
+            <div class="announcement">
+              <div class="bold">Site Maintainence</div>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quia
+                harum quaerat aut corporis quis quam pariatur fugiat nobis
+              </p>
+            </div>
+            <div class="separator"></div>
+
+            <div class="announcement">
+              <div class="bold">Site Maintainence</div>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quia
+                harum quaerat aut corporis quis quam pariatur fugiat nobis
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
