--- a/index.html
+++ b/index.html
@@ -152,6 +152,37 @@
               </p>
             </div>
           </div>
+          <div class="heading">Trending</div>
+          <div class="trending">
+            <div class="trending-element">
+              <div>IMG</div>
+              <div>
+                <div id="username">@username</div>
+                <div>Project Name</div>
+              </div>
+            </div>
+            <div class="trending-element">
+              <div>IMG</div>
+              <div>
+                <div id="username">@username</div>
+                <div>Project Name</div>
+              </div>
+            </div>
+            <div class="trending-element">
+              <div>IMG</div>
+              <div>
+                <div id="username">@username</div>
+                <div>Project Name</div>
+              </div>
+            </div>
+            <div class="trending-element">
+              <div>IMG</div>
+              <div>
+                <div id="username">@username</div>
+                <div>Project Name Longer</div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
