--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <div class="dashboard">
+    <div class="dashboard bold">
       <h1>Dashboard</h1>
       <ul>
         <li>
@@ -53,12 +53,12 @@
         </div>
         <div class="profile">
           <div>IMAGE</div>
-          <div class="text">
+          <div class="text bold">
             <div>Hi there,</div>
             <div>Morgan Osley</div>
           </div>
         </div>
-        <div class="btns">
+        <div class="btns bold">
           <span class="btn">new</span>
           <span class="btn">upload</span>
           <span class="btn">share</span>
