Finish sidebar styling

--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
           </div>
         </div>
         <div class="btns bold">
-          <span class="btn">new</span>
-          <span class="btn">upload</span>
-          <span class="btn">share</span>
+          <span class="btn">New</span>
+          <span class="btn">Upload</span>
+          <span class="btn">Share</span>
         </div>
       </div>
       <div class="content">
