--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         </div>
         <div class="sidebar">
           <div class="heading">Announcements</div>
-          <div class="announcements">
+          <div class="announcements shadow">
             <div class="announcement">
               <div class="bold">Site Maintainence</div>
               <p>
@@ -153,7 +153,7 @@
             </div>
           </div>
           <div class="heading">Trending</div>
-          <div class="trending">
+          <div class="trending shadow">
             <div class="trending-element">
               <div>IMG</div>
               <div>
