Finish dashboard CSS

--- a/index.html
+++ b/index.html
@@ -9,36 +9,60 @@
   </head>
   <body>
     <div class="dashboard bold">
-      <h1>Dashboard</h1>
+      <div id="dashboard">
+        <img src="./assets/dashboard/view-dashboard.svg" alt="" />
+        <h1>Dashboard</h1>
+      </div>
       <ul>
         <li>
-          <a href="">Home</a>
+          <a href=""
+            ><img id="home-icon" src="./assets/dashboard/home.svg" alt="" />
+            Home</a
+          >
         </li>
         <li>
-          <a href="">Profile</a>
+          <a href=""
+            ><img src="./assets/dashboard/id-card.svg" alt="" /> Profile</a
+          >
         </li>
         <li>
-          <a href="">Messages</a>
+          <a href=""
+            ><img src="./assets/dashboard/message.svg" alt="" /> Messages</a
+          >
         </li>
         <li>
-          <a href="">History</a>
+          <a href=""
+            ><img src="./assets/dashboard/history.svg" alt="" /> History</a
+          >
         </li>
         <li>
-          <a href="">Tasks</a>
+          <a href=""
+            ><img src="./assets/dashboard/file-multiple.svg" alt="" /> Tasks</a
+          >
         </li>
         <li>
-          <a href="">Communities</a>
+          <a href=""
+            ><img src="./assets/dashboard/account-group.svg" alt="" />
+            Communities</a
+          >
         </li>
       </ul>
       <ul>
         <li>
-          <a href=""> Settings</a>
+          <a href=""
+            ><img src="./assets/dashboard/cog.svg" alt="" /> Settings</a
+          >
         </li>
         <li>
-          <a href=""> Support</a>
+          <a href=""
+            ><img src="./assets/dashboard/help-box-outline.svg" alt="" />
+            Support</a
+          >
         </li>
         <li>
-          <a href=""> Privacy</a>
+          <a href=""
+            ><img src="./assets/dashboard/lock.svg" alt="" /> Privacy</a
+          >
         </li>
       </ul>
     </div>
