Finish Header CSS

--- a/index.html
+++ b/index.html
@@ -69,17 +69,33 @@
     <div class="main">
       <div class="header">
         <div class="search">
-          <span>svg</span>
+          <img style="width: 1.8rem" src="./assets/header/magnify.svg" alt="" />
           <input type="text" placeholder="Search Bar" />
         </div>
         <div id="icons">
-          <span>svg</span><span>svg</span><span>PROFILE NAME</span>
+          <img
+            style="width: 1.5rem"
+            src="./assets/header/bell-ring.svg"
+            alt=""
+          />
+          <img
+            class="pfp"
+            style="width: 50px"
+            src="./assets/header/pfp-icon.png"
+            alt=""
+          />
+          <span class="bold">Profile Name</span>
         </div>
         <div class="profile">
-          <div>IMAGE</div>
+          <img
+            class="pfp"
+            style="width: 70px"
+            src="./assets/header/pfp-icon.png"
+            alt=""
+          />
           <div class="text bold">
             <div>Hi there,</div>
-            <div>Morgan Osley</div>
+            <div style="font-size: 1.7rem">Morgan Osley</div>
           </div>
         </div>
         <div class="btns bold">
