Finish card CSS

--- a/index.html
+++ b/index.html
@@ -115,7 +115,12 @@
                 Sapiente corrupti ipsam fugit ab iure sequi ducimus natus velit
                 rem quidem!
               </div>
-              <div>btn btn btn</div>
+              <div>
+                <img src="./assets/main/star-plus-outline.svg" alt="" /><img
+                  src="./assets/main/share-variant.svg"
+                  alt=""
+                /><img src="./assets/main/eye-plus-outline.svg" alt="" />
+              </div>
             </div>
             <div class="card">
               <div class="bold">Super Easy Project</div>
@@ -124,7 +129,12 @@
                 Sapiente corrupti ipsam fugit ab iure sequi ducimus natus velit
                 rem quidem!
               </div>
-              <div>btn btn btn</div>
+              <div>
+                <img src="./assets/main/star-plus-outline.svg" alt="" /><img
+                  src="./assets/main/share-variant.svg"
+                  alt=""
+                /><img src="./assets/main/eye-plus-outline.svg" alt="" />
+              </div>
             </div>
             <div class="card">
               <div class="bold">Super Easy Project</div>
@@ -133,7 +143,12 @@
                 Sapiente corrupti ipsam fugit ab iure sequi ducimus natus velit
                 rem quidem!
               </div>
-              <div>btn btn btn</div>
+              <div>
+                <img src="./assets/main/star-plus-outline.svg" alt="" /><img
+                  src="./assets/main/share-variant.svg"
+                  alt=""
+                /><img src="./assets/main/eye-plus-outline.svg" alt="" />
+              </div>
             </div>
             <div class="card">
               <div class="bold">Super Easy Project</div>
@@ -142,7 +157,12 @@
                 Sapiente corrupti ipsam fugit ab iure sequi ducimus natus velit
                 rem quidem!
               </div>
-              <div>btn btn btn</div>
+              <div>
+                <img src="./assets/main/star-plus-outline.svg" alt="" /><img
+                  src="./assets/main/share-variant.svg"
+                  alt=""
+                /><img src="./assets/main/eye-plus-outline.svg" alt="" />
+              </div>
             </div>
             <div class="card">
               <div class="bold">Super Easy Project</div>
@@ -151,7 +171,12 @@
                 Sapiente corrupti ipsam fugit ab iure sequi ducimus natus velit
                 rem quidem!
               </div>
-              <div>btn btn btn</div>
+              <div>
+                <img src="./assets/main/star-plus-outline.svg" alt="" /><img
+                  src="./assets/main/share-variant.svg"
+                  alt=""
+                /><img src="./assets/main/eye-plus-outline.svg" alt="" />
+              </div>
             </div>
             <div class="card">
               <div class="bold">Super Easy Project</div>
@@ -160,7 +185,12 @@
                 Sapiente corrupti ipsam fugit ab iure sequi ducimus natus velit
                 rem quidem!
               </div>
-              <div>btn btn btn</div>
+              <div>
+                <img src="./assets/main/star-plus-outline.svg" alt="" /><img
+                  src="./assets/main/share-variant.svg"
+                  alt=""
+                /><img src="./assets/main/eye-plus-outline.svg" alt="" />
+              </div>
             </div>
           </div>
         </div>
