Finish sidebar CSS

--- a/index.html
+++ b/index.html
@@ -225,28 +225,28 @@
           <div class="heading">Trending</div>
           <div class="trending shadow">
             <div class="trending-element">
-              <div>IMG</div>
+              <img src="./assets/main/trending/elephant.png" alt="" />
               <div>
                 <div id="username">@username</div>
                 <div>Project Name</div>
               </div>
             </div>
             <div class="trending-element">
-              <div>IMG</div>
+              <img src="./assets/main/trending/raccoon.png" alt="" />
               <div>
                 <div id="username">@username</div>
                 <div>Project Name</div>
               </div>
             </div>
             <div class="trending-element">
-              <div>IMG</div>
+              <img src="./assets/main/trending/squirrel.png" alt="" />
               <div>
                 <div id="username">@username</div>
                 <div>Project Name</div>
               </div>
             </div>
             <div class="trending-element">
-              <div>IMG</div>
+              <img src="./assets/main/trending/tiger.png" alt="" />
               <div>
                 <div id="username">@username</div>
                 <div>Project Name Longer</div>
