Add github link

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             src="./assets/header/pfp-icon.png"
             alt=""
           />
-          <span class="bold">Profile Name</span>
+          <span class="bold">Morgan Osley</span>
         </div>
         <div class="profile">
           <img
@@ -98,7 +98,17 @@
           />
           <div class="text bold">
             <div>Hi there,</div>
-            <div style="font-size: 1.7rem">Morgan Osley</div>
+            <div class="profile-link">
+              <a href="https://github.com/amrxt1"
+                >Amritveer Singh (@amrxt1
+                <span
+                  ><img
+                    style="width: 2rem"
+                    src="./assets/github.svg"
+                    alt="github" /></span
+                >)
+              </a>
+            </div>
           </div>
         </div>
         <div class="btns bold">
